--- a/survey/src/main/AndroidManifest.xml
+++ b/survey/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.quickbirdstudios.surveykit" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.quickbirdstudios.surveykit">
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+</manifest>
